# sysprog-week2-app

./: CMakeLists.txt  IPlugin.hpp  PluginWrapper.cpp  PluginWrapper.hpp  file.txt  main.cpp
plugins/: libweek2tutorial.plug
